Eliminate most calls to deprecated SecurityPolicy.hasPermissions()