@@ -221,9 +221,8 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
 
     protected void init()
     {
-        // Determine the security policy for this webpart
-        SecurityPolicy policy = SecurityPolicyManager.getPolicy(getSecurableResource());
-        getConfiguredForm(policy);
+        // Prep the webpart's form
+        getConfiguredForm(getSecurableResource());
     }
 
 
@@ -235,7 +234,7 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
     }
 
 
-    protected List<FilesForm.actions> getConfiguredActions(SecurityPolicy policy)
+    protected List<FilesForm.actions> getConfiguredActions(SecurableResource resource)
     {
         List<FilesForm.actions> actions = new ArrayList<>();
         ViewContext context = getViewContext();
@@ -247,21 +246,21 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
         actions.add(FilesForm.actions.refresh);
 
         // Actions not based on the current selection
-        if (policy.hasPermission(user, InsertPermission.class))
+        if (resource.hasPermission(user, InsertPermission.class))
             actions.add(FilesForm.actions.createDirectory);
 
         // Actions based on the current selection
         actions.add(FilesForm.actions.download);
-        if (policy.hasPermission(user, DeletePermission.class))
+        if (resource.hasPermission(user, DeletePermission.class))
             actions.add(FilesForm.actions.deletePath);
 
-        if (policy.hasPermission(user, UpdatePermission.class))
+        if (resource.hasPermission(user, UpdatePermission.class))
         {
             actions.add(FilesForm.actions.renamePath);
             actions.add(FilesForm.actions.movePath);
         }
 
-        if (policy.hasPermission(user, InsertPermission.class))
+        if (resource.hasPermission(user, InsertPermission.class))
         {
             actions.add(FilesForm.actions.editFileProps);
             if (!PremiumService.get().isFileUploadDisabled())
@@ -292,7 +291,7 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
         return actions;
     }
 
-    protected FilesForm getConfiguredForm(SecurityPolicy policy)
+    protected FilesForm getConfiguredForm(SecurableResource resource)
     {
         FilesForm form = getModelBean();
         ViewContext context = getViewContext();
@@ -327,7 +326,7 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
         form.setEnabled(!svc.isFileRootDisabled(rootContextContainer));
         form.setContentId("fileContent" + System.identityHashCode(this));
 
-        if (policy.hasPermission(user, InsertPermission.class))
+        if (resource.hasPermission(user, InsertPermission.class))
         {
             FilesAdminOptions options = svc.getAdminOptions(container);
             boolean expandUpload = BooleanUtils.toBooleanDefaultIfNull(options.getExpandFileUpload(), false);
@@ -350,18 +349,18 @@ public class FilesWebPart extends JspView<FilesWebPart.FilesForm>
             form.setRunEditors(editorMap);
         }
 
-        List<FilesForm.actions> actions = getConfiguredActions(policy);
+        List<FilesForm.actions> actions = getConfiguredActions(resource);
         form.setButtonConfig(actions.toArray(new FilesForm.actions[actions.size()]));
 
         return form;
     }
 
-    private static final Set<String> _allowedDavNames = new HashSet<>(Arrays.asList(
-            FileContentService.CLOUD_LINK,
-            FileContentService.FILE_SETS_LINK,
-            FileContentService.FILES_LINK,
-            FileContentService.PIPELINE_LINK
-    ));
+    private static final Set<String> _allowedDavNames = Set.of(
+        FileContentService.CLOUD_LINK,
+        FileContentService.FILE_SETS_LINK,
+        FileContentService.FILES_LINK,
+        FileContentService.PIPELINE_LINK
+    );
 
     public static String getRootPath(Container c, @Nullable String davName)
     {
